--- a/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
@@ -14,8 +14,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T16:01:45.314388Z",
-     "start_time": "2024-12-09T16:01:43.536146Z"
+     "end_time": "2024-12-17T13:44:05.910963Z",
+     "start_time": "2024-12-17T13:44:02.768862Z"
     }
    },
    "cell_type": "code",
@@ -32,8 +32,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T08:33:48.423284Z",
-     "start_time": "2024-12-10T08:33:48.304342Z"
+     "end_time": "2024-12-17T13:44:07.447513Z",
+     "start_time": "2024-12-17T13:44:07.393403Z"
     }
    },
    "cell_type": "code",
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T08:34:21.631077Z",
-     "start_time": "2024-12-10T08:34:21.609952Z"
+     "end_time": "2024-12-17T13:44:12.197541Z",
+     "start_time": "2024-12-17T13:44:12.175315Z"
     }
    },
    "cell_type": "code",
@@ -83,8 +83,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:56:54.092159Z",
-     "start_time": "2024-12-11T13:56:50.891390Z"
+     "end_time": "2024-12-17T13:45:24.992082Z",
+     "start_time": "2024-12-17T13:45:24.930031Z"
     }
    },
    "cell_type": "code",
@@ -116,26 +116,14 @@
     "db_service_entity = metadata.create_or_update(data=db_service)"
    ],
    "id": "2e37614cb861d481",
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'metadata' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 24\u001B[0m\n\u001B[0;32m     11\u001B[0m db_service \u001B[38;5;241m=\u001B[39m CreateDatabaseServiceRequest(\n\u001B[0;32m     12\u001B[0m     name\u001B[38;5;241m=\u001B[39mDB_SERVICE_NAME,\n\u001B[0;32m     13\u001B[0m     serviceType\u001B[38;5;241m=\u001B[39mDatabaseServiceType\u001B[38;5;241m.\u001B[39mMysql,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     20\u001B[0m     ),\n\u001B[0;32m     21\u001B[0m )\n\u001B[0;32m     23\u001B[0m \u001B[38;5;66;03m# when we create an entity by using function `create_or_update`, it returns the created instance of the query\u001B[39;00m\n\u001B[1;32m---> 24\u001B[0m db_service_entity \u001B[38;5;241m=\u001B[39m \u001B[43mmetadata\u001B[49m\u001B[38;5;241m.\u001B[39mcreate_or_update(data\u001B[38;5;241m=\u001B[39mdb_service)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'metadata' is not defined"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T08:43:50.536043Z",
-     "start_time": "2024-12-10T08:43:50.425691Z"
+     "end_time": "2024-12-17T13:45:27.287968Z",
+     "start_time": "2024-12-17T13:45:27.192435Z"
     }
    },
    "cell_type": "code",
@@ -152,13 +140,13 @@
    ],
    "id": "70856d7e4a869e6",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T08:52:24.660087Z",
-     "start_time": "2024-12-10T08:52:24.591892Z"
+     "end_time": "2024-12-17T13:45:28.057564Z",
+     "start_time": "2024-12-17T13:45:27.957151Z"
     }
    },
    "cell_type": "code",
@@ -175,7 +163,7 @@
    ],
    "id": "3b0d61d6d7f53636",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -192,8 +180,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T11:05:26.462521Z",
-     "start_time": "2024-12-10T11:05:26.457550Z"
+     "end_time": "2024-12-17T13:45:29.759727Z",
+     "start_time": "2024-12-17T13:45:29.754072Z"
     }
    },
    "cell_type": "code",
@@ -213,17 +201,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PLIU\\Documents\\git\\ConstanceDataPlatform\\data\\om\n"
+      "/home/pliu/git/ConstanceDataPlatform/data/om\n"
      ]
     }
    ],
-   "execution_count": 36
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T11:05:27.083376Z",
-     "start_time": "2024-12-10T11:05:27.061476Z"
+     "end_time": "2024-12-17T13:45:30.794021Z",
+     "start_time": "2024-12-17T13:45:30.745820Z"
     }
    },
    "cell_type": "code",
@@ -253,13 +241,13 @@
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T11:16:39.191944Z",
-     "start_time": "2024-12-10T11:16:39.170549Z"
+     "end_time": "2024-12-17T13:45:31.877911Z",
+     "start_time": "2024-12-17T13:45:31.869336Z"
     }
    },
    "cell_type": "code",
@@ -285,17 +273,17 @@
       "1    string       28            NaN      2024          NaN  \n",
       "2    number        8            NaN      2024          NaN  \n",
       "3    string       26            NaN      2024          NaN  \n",
-      "4    string        5            NaN      2024          NaN  \n"
+      "4    string        5     code_insee      2024          NaN  \n"
      ]
     }
    ],
-   "execution_count": 56
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T11:16:39.829393Z",
-     "start_time": "2024-12-10T11:16:39.808702Z"
+     "end_time": "2024-12-17T13:45:33.043571Z",
+     "start_time": "2024-12-17T13:45:33.013690Z"
     }
    },
    "cell_type": "code",
@@ -352,7 +340,7 @@
      ]
     }
    ],
-   "execution_count": 57
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -368,8 +356,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T11:16:41.141145Z",
-     "start_time": "2024-12-10T11:16:41.128586Z"
+     "end_time": "2024-12-17T13:45:35.149985Z",
+     "start_time": "2024-12-17T13:45:35.125698Z"
     }
    },
    "cell_type": "code",
@@ -533,13 +521,13 @@
    ],
    "id": "977b30bed9bf7f6c",
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T11:16:41.956782Z",
-     "start_time": "2024-12-10T11:16:41.669717Z"
+     "end_time": "2024-12-17T13:45:36.227203Z",
+     "start_time": "2024-12-17T13:45:35.912793Z"
     }
    },
    "cell_type": "code",
@@ -579,7 +567,7 @@
      ]
     }
    ],
-   "execution_count": 59
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -588,10 +576,13 @@
    "id": "ee2443979be2930f"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T13:44:49.365929Z",
+     "start_time": "2024-12-17T13:44:48.691966Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "service_id = metadata.get_by_name(\n",
     "    entity=DatabaseService, fqn=DB_SERVICE_NAME\n",
@@ -604,7 +595,17 @@
     "    hard_delete=True,\n",
     ")"
    ],
-   "id": "f58adb42567775ef"
+   "id": "f58adb42567775ef",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "20549119fa56f219"
   }
  ],
  "metadata": {
