--- a/Seminar2_Metadata_management/OpenMetadata/02.Create_glossary_terms.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/02.Create_glossary_terms.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:58:25.414223Z",
-     "start_time": "2024-12-11T14:58:21.096415Z"
+     "end_time": "2024-12-17T13:52:34.471441Z",
+     "start_time": "2024-12-17T13:52:32.475895Z"
     }
    },
    "source": [
@@ -26,13 +26,13 @@
     "from metadata.generated.schema.type.tagLabel import TagLabel, TagSource, State, LabelType"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:58:26.240869Z",
-     "start_time": "2024-12-11T14:58:26.186880Z"
+     "end_time": "2024-12-17T13:52:35.286389Z",
+     "start_time": "2024-12-17T13:52:35.252925Z"
     }
    },
    "cell_type": "code",
@@ -49,13 +49,13 @@
    ],
    "id": "192bc36f1c47ca26",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:58:27.723365Z",
-     "start_time": "2024-12-11T14:58:27.705094Z"
+     "end_time": "2024-12-17T13:52:36.770795Z",
+     "start_time": "2024-12-17T13:52:36.749046Z"
     }
    },
    "cell_type": "code",
@@ -71,18 +71,18 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:58:29.661626Z",
-     "start_time": "2024-12-11T14:58:29.650529Z"
+     "end_time": "2024-12-17T13:52:39.006153Z",
+     "start_time": "2024-12-17T13:52:39.000946Z"
     }
    },
    "cell_type": "code",
@@ -99,11 +99,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PLIU\\Documents\\git\\ConstanceDataPlatform\\data\\om\n"
+      "/home/pliu/git/ConstanceDataPlatform/data/om\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -118,8 +118,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:58:36.156257Z",
-     "start_time": "2024-12-11T14:58:36.150693Z"
+     "end_time": "2024-12-17T13:52:40.719658Z",
+     "start_time": "2024-12-17T13:52:40.708928Z"
     }
    },
    "cell_type": "code",
@@ -131,13 +131,13 @@
    ],
    "id": "14eea3c367a1460d",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T13:58:43.306845Z",
-     "start_time": "2024-12-10T13:58:43.287179Z"
+     "end_time": "2024-12-17T13:52:41.758477Z",
+     "start_time": "2024-12-17T13:52:41.749699Z"
     }
    },
    "cell_type": "code",
@@ -195,8 +195,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:59:07.828018Z",
-     "start_time": "2024-12-11T14:59:07.814385Z"
+     "end_time": "2024-12-17T13:52:42.708826Z",
+     "start_time": "2024-12-17T13:52:42.699328Z"
     }
    },
    "cell_type": "code",
@@ -257,13 +257,13 @@
    ],
    "id": "56377ecd4c0467f2",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:32:04.687971Z",
-     "start_time": "2024-12-10T14:32:04.679903Z"
+     "end_time": "2024-12-17T13:52:43.663356Z",
+     "start_time": "2024-12-17T13:52:43.633753Z"
     }
    },
    "cell_type": "code",
@@ -283,19 +283,19 @@
       "0  geometry_type  The description of possible type values in a g...   \n",
       "1     code_insee  The administrative code of a french commune is...   \n",
       "\n",
-      "        variables_liees  nombre_lignes  \n",
-      "0  Aucune variable liée            NaN  \n",
-      "1  Aucune variable liée            NaN  \n"
+      "  variables_liees  nombre_lignes  \n",
+      "0        geometry            NaN  \n",
+      "1           insee            NaN  \n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:33:12.547505Z",
-     "start_time": "2024-12-10T14:33:12.536050Z"
+     "end_time": "2024-12-17T13:52:44.780942Z",
+     "start_time": "2024-12-17T13:52:44.754756Z"
     }
    },
    "cell_type": "code",
@@ -317,21 +317,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'nomenclature': 'geometry_type', 'titre': 'The description of possible type values in a geometry column', 'variables_liees': 'Aucune variable liée', 'nombre_lignes': nan}\n",
+      "{'nomenclature': 'geometry_type', 'titre': 'The description of possible type values in a geometry column', 'variables_liees': 'geometry', 'nombre_lignes': nan}\n",
       "treating term: geometry_type\n",
-      "{'nomenclature': 'code_insee', 'titre': 'The administrative code of a french commune issued by INSEE ', 'variables_liees': 'Aucune variable liée', 'nombre_lignes': nan}\n",
+      "{'nomenclature': 'code_insee', 'titre': 'The administrative code of a french commune issued by INSEE ', 'variables_liees': 'insee', 'nombre_lignes': nan}\n",
       "treating term: code_insee\n",
       "[{'parent': '', 'name*': 'geometry_type', 'displayName': 'geometry_type', 'description': 'The description of possible type values in a geometry column \\n | geo_type   | description                                                     |\\n|:-----------|:----------------------------------------------------------------|\\n| point      | A pair of (latitude, longitude) which represent the geolocation |\\n| line       | A list of points which represent a line                         |\\n| polygon    | A list of points which represent a polygone                     |', 'synonyms': 'geometry_type', 'relatedTerms': '', 'references': '', 'tags': '', 'reviewers': '', 'owner': 'user;admin', 'status': 'Approved'}, {'parent': '', 'name*': 'code_insee', 'displayName': 'code_insee', 'description': 'The administrative code of a french commune issued by INSEE  \\n |   insee_code | commune_name   |\\n|-------------:|:---------------|\\n|            1 | toto           |\\n|            2 | titi           |\\n|            3 | tata           |', 'synonyms': 'code_insee', 'relatedTerms': '', 'references': '', 'tags': '', 'reviewers': '', 'owner': 'user;admin', 'status': 'Approved'}]\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:33:18.505605Z",
-     "start_time": "2024-12-10T14:33:18.487642Z"
+     "end_time": "2024-12-17T13:52:45.986788Z",
+     "start_time": "2024-12-17T13:52:45.976984Z"
     }
    },
    "cell_type": "code",
@@ -342,7 +342,7 @@
    ],
    "id": "a20982cc4ee08acc",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -366,33 +366,35 @@
    "source": [
     "## 3. Link terms with target columns\n",
     "\n",
-    "The terms in glossary has been created, now we need to associate the terms with matched columns. "
+    "The terms in glossary has been created, now we need to associate the terms with matched columns.\n",
+    "\n",
+    "> if you already move the database to the domain constances, you also need to move the glossary to the domain constances. Othwise, you can not associate the term with the target columns"
    ],
    "id": "96e444eb37031d3e"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:00:13.777977Z",
-     "start_time": "2024-12-11T16:00:13.766644Z"
+     "end_time": "2024-12-17T14:23:19.378064Z",
+     "start_time": "2024-12-17T14:23:19.371979Z"
     }
    },
    "cell_type": "code",
    "source": [
     "DB_SERVICE_NAME=\"Constances-Geography\"\n",
-    "DB_NAME = \"Geography\"\n",
-    "SCHEMA_NAME = \"hospitals_in_france\"\n",
+    "DB_NAME = \"hospitals_in_france\"\n",
+    "SCHEMA_NAME = \"Geography\"\n",
     "glossary_name = \"constances_geo_terms\""
    ],
    "id": "30360bf75e069c88",
    "outputs": [],
-   "execution_count": 45
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:00:14.688786Z",
-     "start_time": "2024-12-11T16:00:14.675894Z"
+     "end_time": "2024-12-17T14:23:20.232710Z",
+     "start_time": "2024-12-17T14:23:20.223397Z"
     }
    },
    "cell_type": "code",
@@ -468,13 +470,13 @@
    ],
    "id": "7cac5028c00d241c",
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:00:15.099248Z",
-     "start_time": "2024-12-11T16:00:15.077757Z"
+     "end_time": "2024-12-17T14:23:21.102656Z",
+     "start_time": "2024-12-17T14:23:21.096334Z"
     }
    },
    "cell_type": "code",
@@ -492,13 +494,13 @@
      ]
     }
    ],
-   "execution_count": 47
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:00:15.465309Z",
-     "start_time": "2024-12-11T16:00:15.454963Z"
+     "end_time": "2024-12-17T14:23:21.980038Z",
+     "start_time": "2024-12-17T14:23:21.972128Z"
     }
    },
    "cell_type": "code",
@@ -526,13 +528,13 @@
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:00:16.548254Z",
-     "start_time": "2024-12-11T16:00:15.789137Z"
+     "end_time": "2024-12-17T14:23:24.013658Z",
+     "start_time": "2024-12-17T14:23:22.943560Z"
     }
    },
    "cell_type": "code",
@@ -580,7 +582,7 @@
      ]
     }
    ],
-   "execution_count": 49
+   "execution_count": 25
   },
   {
    "metadata": {},
